# imdb-postgres

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.csv  imdb  init.sh  pyproject.toml
imdb/: __main__.py  parse.py  util.py
imdb/table/: __init__.py  name_basics.py  title_akas.py  title_basics.py  title_crew.py  title_episode.py  title_principals.py  title_ratings.py
imdblib/: __main__.py  parse.py  psql.py
imdblib/table/: __init__.py  name_basics.py  title_akas.py  title_basics.py  title_crew.py  title_episode.py  title_principals.py  title_ratings.py
